Use LinkedList instead of ArrayList, Adapt the getFirst() method